# CurProject02

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.cursor/: __init__.py
.cursor/rules/: project-description.mdc  project-execution-plan.mdc
.github/workflows/: __init__.py  ci.yml  docker.yml
app/: deps.py  main.py  settings.py  ui_components.py
app/audio/: f0.py  io.py  key_tempo.py  notation.py  preprocess.py  quantize.py  separation.py  synthesis.py
app/db/: migrations.py  models.py  repository.py  schema.sql
app/pages/: 01_Upload.py  02_Settings.py  03_Preview_and_Editor.py  04_Export.py  05_History.py
app/tasks/: celery_tasks.py  scheduler.py  utils.py
app/utils/: ids.py  logging.py
docker/: Dockerfile.app  Dockerfile.worker  __init__.py  verovio_install_notes.md
tests/: test_pipeline_smoke.py  test_rendering.py
